[package]
name = "openagent-terminal"
version = "0.16.1"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0 OR MIT"
description = "AI-enhanced, cross-platform terminal emulator with built-in command assistance; fast GPU rendering (WGPU), privacy-first, optional local/cloud AI providers."
readme = "README.md"
homepage = "https://github.com/GeneticxCln/OpenAgent-Terminal"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
autoexamples = false

[[bin]]
name = "openagent-terminal"
path = "src/main.rs"


[dependencies.openagent-terminal-core]
path = "../openagent-terminal-core"
version = "0.25.1-dev"

[dependencies.openagent-terminal-config-derive]
path = "../openagent-terminal-config-derive"
version = "0.2.5-dev"

[dependencies.openagent-terminal-config]
path = "../openagent-terminal-config"
version = "0.2.3-dev"




[dependencies]
chrono = { version = "0.4.42", features = ["std", "serde", "clock"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

ahash = { version = "0.8.6", features = ["no-rng"] }
bitflags = { workspace = true }
clap = { version = "4.2.7", features = ["derive", "env"] }
copypasta = { version = "0.10.1", default-features = false }
crossfont = { workspace = true }
tracing = { workspace = true }
# WGPU renderer
wgpu = { version = "26.0", optional = true }
# WGPU utilities
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"] }
# Text shaping dependencies
harfbuzz_rs = { workspace = true, optional = true }
fontdb = { workspace = true, optional = true }
# Component management
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
dirs = "6.0.0"
once_cell = "1.19"
# Blocks v2 dependencies
# Text shaping additional dependencies
unicode-bidi = { workspace = true, optional = true }

home = "0.5.5"
libc = "0.2"
log = { version = "0.4", features = ["std", "serde"] }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
notify = "8.0.0"
parking_lot = "0.12.0"
regex = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
sha2 = "0.10"
bincode = "1"
tempfile = "3.12.0"
thiserror = { workspace = true }
toml.workspace = true
toml_edit.workspace = true
unicode-width = "0.2.0"
winit = { workspace = true, features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
csv = "1.3"
comfy-table = "7.0"
# Database for blocks
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
# Observability
metrics-exporter-prometheus = { workspace = true }
# Optional at-rest log encryption
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = { workspace = true }
rand = "0.9"
# Streaming utilities for HTTP bodies
futures-util = { workspace = true }


[build-dependencies]

[dev-dependencies]
clap_complete = "4.2.3"
image = "0.25"
sha2 = "0.10"
criterion = { version = "0.7", features = ["html_reports"] }
futures = "0.3.31"
# Ensure examples/tests can directly depend on wgpu APIs regardless of optional feature plumbing
wgpu = "26.0"
pollster = "0.4"
proptest = "1.8"
serial_test = "3"
insta = "1.34"
# Memory testing dependencies
filetime = "0.2"
tempfile = "3.12.0"

[target.'cfg(not(windows))'.dependencies]
xdg = "3.0.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
png = { version = "0.18.0", default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSString",
    "NSLocale",
] }
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSColorSpace",
    "NSResponder",
    "NSView",
    "NSWindow",
] }

[target.'cfg(windows)'.dependencies]
dirs = "6.0.0"
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"

[features]
# WGPU-only default. No OpenGL backend.
# Warp-only alignment: remove AI/workflow/sync/IDE/plugin toggles from defaults.
default = ["wayland", "x11", "wgpu", "completions"]
# Preview-only UI helpers used by examples/demos
preview_ui = []
# Experimental placeholders/scaffolding that is planned but not yet actively used
experimental = []
# Optional background component initialization in a separate task
background-components = []
# WGPU rendering backend
wgpu = ["dep:wgpu", "dep:pollster"]
# Convenience preset: enable experimental WGPU backend with one flag (alias)
renderer-wgpu = ["wgpu"]
# Experimental always-on completions overlay (gated until stable)
completions = []
# Placeholder toggles used by cfg checks in code; intentionally empty feature flags to silence unexpected cfg warnings
ai = []
workflow = []
ide = []

# Gate demos/integration code that isn't production-ready
# Enable with: cargo build -p openagent-terminal --features demos
# Or run examples that depend on it with the same feature enabled
demos = []

x11 = [
    "copypasta/x11",
    "winit/x11",
    "png",
    # WGPU-only renderer is required; ensure x11 builds pull in WGPU
    "wgpu",
]
wayland = [
    "copypasta/wayland",
    "winit/wayland",
    "winit/wayland-dlopen",
    "winit/wayland-csd-adwaita-crossfont",
]
nightly = []
# Enhanced text shaping with HarfBuzz
harfbuzz = ["dep:harfbuzz_rs", "dep:fontdb", "dep:unicode-bidi"]
# Experimental native modules (input, renderer, search, persistence)
# Disabled by default until stabilized
native-extras = []
# Never-enabled feature to disable removed functionality
never = []

[package.metadata.msix]
# Minimal MSIX metadata for unsigned packaging in CI
identity_name = "OpenAgent.Terminal"
publisher = "CN=OpenAgent"
msix_version = "1.0.0.0"
display_name = "OpenAgent Terminal"
description = "AI-enhanced, cross-platform terminal"
logo_path = "extra/logo/openagent-terminal.png"
# Keep capability surface minimal
capabilities = ["internetClient"]

[[example]]
name = "snapshot_capture"
path = "examples/snapshot_capture.rs"
required-features = ["preview_ui"]

[[example]]
name = "perf_cold_start"
path = "examples/perf_cold_start.rs"
required-features = ["wgpu"]

[[example]]
name = "perf_latency"
path = "examples/perf_latency.rs"
required-features = ["wgpu"]

[[example]]
name = "perf_wgpu"
path = "examples/perf_wgpu.rs"
required-features = ["wgpu"]

[[example]]
name = "render_smoke"
path = "examples/render_smoke.rs"

[[example]]
name = "wgpu_snapshot"
path = "examples/wgpu_snapshot.rs"
required-features = ["wgpu"]


[[bench]]
name = "terminal_startup"
harness = false

[[bench]]
name = "render_performance"
harness = false

