[package]
name = "openagent-terminal-ide-dap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Minimal Debug Adapter Protocol (DAP) client for OpenAgent Terminal IDE features."

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
parking_lot = { workspace = true }
bytes = "1.6"

[dev-dependencies]
serde_json = { workspace = true }

