[package]
name = "openagent-terminal-ide-editor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Minimal terminal-first text editor core (buffer, cursor, edits) for OpenAgent Terminal."

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ropey = "1.6.1"
unicode-width = "0.2.0"
parking_lot = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

