[package]
name = "openagent-terminal-ide-indexer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Project indexer and file tree for OpenAgent Terminal (IDE features)."

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
parking_lot = { workspace = true }
notify = "8.0.0"
walkdir = "2.5.0"
ignore = "0.4.22"

[dev-dependencies]
serde_json = { workspace = true }

