[package]
name = "openagent-terminal-ide-lsp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Minimal LSP client (stdio JSON-RPC) for OpenAgent Terminal IDE features."

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
lsp-types = "0.95.1"
parking_lot = { workspace = true }
bytes = "1.6"
openagent-terminal-ide-editor = { path = "../openagent-terminal-ide-editor" }
url = "2.5"

[dev-dependencies]
serde_json = { workspace = true }

