[package]
name = "openagent-terminal-ide"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "IDE features for OpenAgent Terminal (LSP, DAP, editor, indexer)"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Synchronization & data structures (optional, gated by features)
parking_lot = { workspace = true, optional = true }

# Editor dependencies (optional)
ropey = { version = "1.6", optional = true }

# Indexer dependencies (optional)
ignore = { version = "0.4", optional = true }
notify = { version = "6.1", optional = true }

# LSP dependencies
lsp-types = { version = "0.97.0", optional = true }

# Web editor dependencies  
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
wry = { workspace = true, optional = true }

[features]
default = []
# Enable optional deps via feature activation
lsp = ["dep:lsp-types", "dep:parking_lot"]
editor = ["dep:ropey", "dep:parking_lot"]
indexer = ["dep:ignore", "dep:notify", "dep:parking_lot"]
dap = ["dep:parking_lot"]
web-editors = ["dep:axum", "dep:hyper", "dep:tokio-tungstenite", "dep:wry"]
all = ["lsp", "editor", "indexer", "dap", "web-editors"]
