[package]
name = "openagent-terminal-ide"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "IDE features for OpenAgent Terminal (LSP, DAP, editor, indexer)"
readme = "README.md"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Concurrency primitives (feature-gated where used)
parking_lot = { workspace = true, optional = true }

# Rope buffer for editor
ropey = { version = "1.6", optional = true }

# Gitignore-aware walker and filesystem watching for indexer
ignore = { version = "0.4", optional = true }
notify = { version = "8.0.0", optional = true }

# LSP dependencies
lsp-types = { version = "0.97.0", optional = true }

# Web editor dependencies
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
# GTK4 + WebKitGTK (WebKit 6) backend
gtk4 = { version = "0.10.1", optional = true }
webkit6 = { version = "0.5.0", optional = true }

[features]
default = []
# Feature flags enable optional dependencies
lsp = ["dep:lsp-types", "dep:parking_lot"]
editor = ["dep:ropey", "dep:parking_lot"]
indexer = ["dep:ignore", "dep:notify", "dep:parking_lot"]
dap = ["dep:parking_lot"]
web-editors = ["dep:axum", "dep:hyper", "dep:tokio-tungstenite", "dep:gtk4", "dep:webkit6"]
all = ["lsp", "editor", "indexer", "dap", "web-editors"]
