[package]
name = "openagent-terminal-ide"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "IDE features for OpenAgent Terminal (LSP, DAP, editor, indexer)"
readme = "README.md"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Concurrency primitives (feature-gated where used)
parking_lot = { workspace = true, optional = true }

# Rope buffer for editor
ropey = { version = "1.6", optional = true }


# LSP dependencies
lsp-types = { version = "0.97.0", optional = true }


[features]
default = []
# Feature flags enable optional dependencies
lsp = ["dep:lsp-types", "dep:parking_lot"]
editor = ["dep:ropey", "dep:parking_lot"]
all = ["lsp", "editor"]
