[package]
name = "openagent-terminal-migrate"
version = "0.1.0"
authors = ["OpenAgent Terminal Contributors"]
edition = "2021"
description = "Configuration migration tool for OpenAgent Terminal"
license = "Apache-2.0"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Terminal config formats
plist = "1.5"  # For iTerm2 on macOS

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"

# File system operations
walkdir = "2.4"
glob = "0.3"
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Platform detection
cfg-if = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"

[[bin]]
name = "openagent-migrate"
path = "src/main.rs"
