[package]
name = "openagent-terminal-snippets"
version = "0.1.0"
authors = ["OpenAgent Terminal Contributors"]
edition = "2021"
description = "Advanced snippet and macro system for OpenAgent Terminal"
license = "Apache-2.0 OR MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

# Template engine
tera = "1.19"
regex = "1.10"

# File system operations
dirs = "6.0"
walkdir = "2.4"

# For command execution
tokio = { version = "1.47", features = ["process", "fs", "time"], optional = true }

# For fuzzy matching
fuzzy-matcher = "0.3"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# For shell detection and execution
which = "6.0"

[features]
default = ["async"]
async = ["tokio"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
