[package]
name = "openagent-terminal-snippets"
version = "0.1.0"
authors = ["OpenAgent Terminal Contributors"]
edition = "2021"
description = "Advanced snippet and macro system for OpenAgent Terminal"
license = "Apache-2.0 OR MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

# Template engine
tera = "1.19"
regex = "1.10"

# File system operations
walkdir = "2.4"

# For fuzzy matching
fuzzy-matcher = "0.3"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
