[package]
name = "openagent-terminal-themes"
version = "0.1.0"
authors = ["OpenAgent Terminal Contributors"]
edition = "2021"
description = "Theme management and marketplace system for OpenAgent Terminal"
license = "Apache-2.0 OR MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

# File system operations
dirs = "5.0"
walkdir = "2.4"

# HTTP client for theme downloads
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
tokio = { version = "1.47", features = ["fs", "macros"], optional = true }

# Validation
regex = "1.10"
semver = "1.0"

# Hashing for theme integrity
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

[features]
default = ["marketplace"]
marketplace = ["reqwest", "tokio"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
