[package]
name = "openagent-terminal-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility functions for OpenAgent Terminal (themes, snippets, migration)"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true

# File system and path utilities
dirs = "6.0.0"

# Configuration parsing
toml.workspace = true
toml_edit.workspace = true

# Hash and crypto (for theme integrity)
sha2 = "0.10"

# Optional database for migration tracking
rusqlite = { workspace = true, optional = true }

# Date/time for migration tracking
chrono = { workspace = true, optional = true }

[features]
default = ["themes", "snippets"]
themes = []
snippets = []
migrate = ["rusqlite", "chrono"]
all = ["themes", "snippets", "migrate"]
