[package]
name = "plugin-loader"
version = "0.1.0"
authors = ["OpenAgent Terminal Contributors"]
license = "Apache-2.0"
description = "WebAssembly plugin loader for OpenAgent Terminal"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
plugin-api = { path = "../plugin-api", version = "0.1.0" }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
toml.workspace = true
tokio.workspace = true
cap-std = "3.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.12.0"
wat = "1.0"
