[package]
name = "plugin-sdk"
version = "0.1.0"
edition = "2021"
authors = ["OpenAgent Terminal Contributors"]
license = "Apache-2.0"
description = "SDK for developing OpenAgent Terminal plugins in WebAssembly"
repository.workspace = true

[dependencies]
plugin-api = { path = "../plugin-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Proc-macro for plugin development
[dependencies.proc-macro2]
version = "1.0"
optional = true

[dependencies.quote]
version = "1.0"
optional = true

[dependencies.syn]
version = "2.0"
features = ["full", "parsing", "printing"]
optional = true

[features]
default = []
proc-macro = ["proc-macro2", "quote", "syn"]

[lib]
name = "plugin_sdk"
path = "src/lib.rs"

[[bin]]
name = "plugin-sdk-cli"
path = "src/bin/cli.rs"
required-features = ["proc-macro"]

[target.wasm32-wasi.dependencies]
# WASI-specific dependencies
wasi = "0.11"
