[package]
name = "plugin-sdk"
version = "0.1.0"
edition = "2021"
authors = ["OpenAgent Terminal Contributors"]
license = "Apache-2.0"
description = "SDK for developing OpenAgent Terminal plugins in WebAssembly"
repository.workspace = true

[dependencies]
plugin-api = { path = "../plugin-api" }
serde_json = "1.0"

[features]
default = []

[lib]
name = "plugin_sdk"
path = "src/lib.rs"

[target.wasm32-wasi.dependencies]
# WASI-specific dependencies
wasi = "0.11"
