[package]
name = "plugin-system"
version = "0.1.0"
authors = ["OpenAgent Terminal Contributors"]
license = "Apache-2.0"
description = "Unified plugin system for OpenAgent Terminal with WASM runtime and host integration"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["wasm-runtime"]
wasm-runtime = ["wasmtime", "wasmtime-wasi"]
host-integration = []

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"

# WASM runtime
wasmtime = { version = "36.0", optional = true }
wasmtime-wasi = { version = "36.0", optional = true }

# Security and permissions
globset = "0.4"
dunce = "1.0"

# Plugin metadata and communication
toml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
wat = "1.0"
