[package]
name = "plugin-system"
version = "0.1.0"
authors = ["OpenAgent Terminal Contributors"]
license = "Apache-2.0 OR MIT"
description = "Unified plugin system for OpenAgent Terminal with WASM runtime and host integration"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
wasm-runtime = ["wasmtime", "wasmtime-wasi", "dep:reqwest", "dep:regex"]
host-integration = ["dep:libloading"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"

# Native plugin loading (host-integration)
libloading = { version = "0.8", optional = true }

# WASM runtime
wasmtime = { version = "36.0", optional = true }
wasmtime-wasi = { version = "37.0", optional = true }
# HTTP client (blocking) for host_net_fetch under wasm-runtime
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }

# Security and permissions
globset = "0.4"
dunce = "1.0"
regex = { version = "1", optional = true }

# Plugin metadata and communication
toml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
wat = "1.0"
