[package]
name = "workflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tera = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
shlex = "1.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json"] }

[lib]
name = "workflow_engine"
path = "src/lib.rs"
