[package]
name = "workflow-engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tera = { workspace = true }
regex = { workspace = true }
chrono = "0.4.23"
uuid = { workspace = true }
shlex = "1.3"
# HTTP client for API testing
reqwest = { workspace = true }
# SQL database support for database integration
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "derive"] }
# Test utilities
tempfile = { version = "3", optional = false }

[lib]
name = "workflow_engine"
path = "src/lib.rs"
