[package]
name = "dev-tools"
version = "1.0.0"
edition = "2021"

[dependencies]
plugin-api = { path = "../../crates/plugin-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[lib]
name = "dev_tools"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
wasi = []
