[package]
name = "docker-helper"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"

[dependencies]
plugin-sdk = { path = "../../crates/plugin-sdk", version = "0.1.0" }
serde_json = "1.0"
regex = "1.10"

[lib]
name = "docker_helper"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
wasi = []
