[package]
name = "git-context"
version = "1.0.0"
edition = "2021"

[dependencies]
plugin-api = { path = "../../crates/plugin-api" }
plugin-sdk = { path = "../../crates/plugin-sdk", optional = true }
serde_json = "1.0"

[lib]
name = "git_context"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Build for wasm32-wasi target

[features]
default = []
wasi = ["plugin-sdk"]
