[package]
name = "git-context"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
plugin-sdk = { path = "../../crates/plugin-sdk", version = "0.1.0" }
serde_json = "1.0"

[lib]
name = "git_context"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Build for wasm32-wasi target

[features]
default = []
wasi = []
