[package]
name = "hello-wasi-plugin"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-sdk = { path = "../../../crates/plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Build for wasm32-wasi target
[profile.release]
opt-level = "s"  # Optimize for size
lto = true
debug = false
panic = "abort"
