[package]
name = "simple-demo"
version = "1.0.0"
edition = "2021"

[dependencies]
plugin-sdk = { path = "../../../crates/plugin-sdk" }

[lib]
name = "simple_demo"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Build for wasm32-wasi target
[profile.release]
opt-level = "s"  # Optimize for size
lto = true
debug = false
panic = "abort"
